# markdown-editor-mcp-server

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  package.json  pyproject.toml  smithery.yaml
.agent/: build_fix_report.md  implementation_plan.md  tasks.md
.github/workflows/: pr-checks.yml  publish.yml  tests.yml
src/markdown_editor/: server.py
src/markdown_editor/core/: __init__.py  agent.py  config_loader.py  document.py  engine.py  llm_client.py  models.py  parser.py
src/markdown_editor/tools/: edit_tools.py  file_ops.py
tests/: test_edit.md  test_nav.md  test_serialization_fix.py
