[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markdown-editor-mcp-server"
version = "0.1.2"
description = "MCP server for structured text editing in Markdown files"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Artem K" }
]
license = { text = "MIT" }
dependencies = [
    "mcp>=0.9.0",
    "pyyaml>=6.0.1",
]

[project.scripts]
markdown-editor-mcp-server = "markdown_editor.server:run"

[tool.setuptools]
packages = ["markdown_editor", "markdown_editor.tools", "markdown_editor.core"]
package-dir = {"" = "src"}
